<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_qr_screen">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@drawable/bg_back_circle"
        android:padding="14dp"
       android:src="@drawable/ic_backs"
        android:visibility="invisible"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/scannerFrame"
        android:layout_width="316dp"
        android:layout_height="316dp"
        android:background="@drawable/bg_scanner_outer"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="52dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
           />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCornerTL"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/ic_corner_bracket"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"/>

            <ImageView
                android:id="@+id/ivCornerTR"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:scaleX="-1"
                android:src="@drawable/ic_corner_bracket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="28dp"/>

            <ImageView
                android:id="@+id/ivCornerBL"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:scaleY="-1"
                android:src="@drawable/ic_corner_bracket"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="28dp"/>

            <ImageView
                android:id="@+id/ivCornerBR"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:scaleX="-1"
                android:scaleY="-1"
                android:src="@drawable/ic_corner_bracket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="28dp"/>

            <FrameLayout
                android:id="@+id/centerScan"
                android:layout_width="78dp"
                android:layout_height="78dp"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                     android:contentDescription="@string/scan"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_instruction_primary"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/scannerFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"/>

    <TextView
        android:id="@+id/tvInstructionSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_instruction_secondary"
        android:textColor="#7E879D"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/tvInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSca"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:text="@string/tap_to_scan"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/btn_scan_orange"
        app:layout_constraintTop_toBottomOf="@id/tvInstructionSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="34dp"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_footer_note"
        android:textColor="#6E778F"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/btnSca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="62dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
